# smart-fridge-app

./: .gitignore  README.md  docker-compose.yml  model_draft.json  pyproject.toml
app/: Dockerfile  main.py
app/db/: database.py  db_ingredients.py
app/models/: ingredients.py
app/routers/: barcode.py  ingredients.py
smart-fridge-app-ui/: .dockerignore  Dockerfile  package-lock.json  package.json
smart-fridge-app-ui/src/: App.tsx  constants.ts  index.css
smart-fridge-app-ui/src/components/: CapturePhotoComponent copy.tsx  CapturePhotoComponent.tsx  FiltersComponent.tsx  IngredientCard.tsx
